--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link
+    href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    rel="stylesheet"
+  />
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.14&key=bb6034e9c3ef251e90aef8f9f60b3410"></script> 
     <title>ele-app</title>
+    <style>
+       html,body{
+         width:100%;
+         height:100%
+       }
+    </style>
   </head>
   <body>
     <noscript>
